--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node_modules/.bin/nodemon index.js",
+    "build": "cd client && npm run build",
+    "install-client": "cd client && npm install",
+
+    "heroku-postbuild": "npm run install-client && npm run build",
+    "client": "cd client && npm start"
+
   },
   "author": "",
   "license": "ISC",
