--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": " npm install && nodemon index.js",
-    "build": "cd client && npm run build",
+    "start": " npm install && nodemon index.js && cd client && npm install && npm start",
+    "build": "cd client && npm run build && npm start ",
     "install-client": "cd client && npm install",
 
     "heroku-postbuild": "npm run install-client && npm run build",
