--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": " npm install && nodemon index.js && cd client && npm install && npm start",
+    "start": " nodemon index.js ",
     "build": "cd client && npm run build && npm start ",
     "install-client": "cd client && npm install",
 
